Extended the API to use the more detailed machines.
